# mavedb-protein-prediction

./: .gitignore  README.md  main.py  pyproject.toml
data/: data_validation.ipynb  scoresets_builder.py  sequence_builder.py
