[project]
name = "mavedb-protein-prediction"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "tqdm",
    "pillow",
    "jupyter",
    "matplotlib",
    "seaborn",
    "transformers",
    "evaluate",
    "datasets",
    "requests",
    "huggingface_hub",
    "safetensors",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu128 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true